--- a/src/App.scss
+++ b/src/App.scss
@@ -26,10 +26,9 @@
   flex: 1;
   height: 100%;
   display: flex;
-  // flex-direction: column;
   color: #fff;
   text-align: left;
-  padding-left: 40px;
+  padding-left: 12%;
   padding-right: 40px;
 
   h1 {
@@ -54,3 +53,30 @@
   align-items: center;
   justify-content: flex-start;
 }
+
+.side-menu {
+  display: flex;
+  background-color: #262a33;
+  height: 100%;
+  width: 7%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  border-right-width: 0.1px;
+  border-right-color: #36363a98;
+  border-right-style: solid;
+  z-index: 100;
+
+  align-items: center;
+  justify-content: center;
+}
+
+.tab {
+  width: 99%;
+  padding-top: 6px;
+  padding-bottom: 2px;
+  justify-content: center;
+  align-items: center;
+  border-right-style: solid;
+}
+
