--- a/src/mobile.scss
+++ b/src/mobile.scss
@@ -5,12 +5,18 @@
     flex-direction: column;
     top: 0;
     left: 0;
+    justify-content: center;
   }
 
   .slide {
     [aria-label="animation"] {
-      width: 60%;
-      height: 40%;
+      width: 60% !important;
+      height: 60% !important;
+    }
+
+    h1 {
+      font-size: 50px;
+      font-weight: 900;
     }
   }
 
@@ -20,17 +26,19 @@
 
   .col {
     flex-direction: column;
+    align-items: center;
   }
 
   .row {
     flex-direction: row;
+    align-items: center;
   }
 
-  .profile {
+  .aboutme {
     img {
       padding-left: 100px;
-      height: 420px;
-      width: 420px;
+      height: 400px;
+      width: 400px;
     }
     .left-col {
       width: 40%;
@@ -44,9 +52,16 @@
     justify-content: flex-end;
   }
   .slide {
+    padding-top: 40px;
+
     [aria-label="animation"] {
       width: 80% !important;
-      height: 45% !important;
+      height: auto !important;
+    }
+
+    h1 {
+      font-size: 40px;
+      margin-top: 10px;
     }
   }
   .side-menu {
@@ -70,10 +85,10 @@
     flex-direction: column;
   }
 
-  .profile {
+  .aboutme {
     img {
       padding-left: 0;
-      height: 38%;
+      height: auto;
       width: 100%;
     }
     .left-col {
