--- a/src/App.scss
+++ b/src/App.scss
@@ -1,28 +1,5 @@
 @import 'mobile';
 
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
-}
-
 .slide {
   background-color: #282c34;
   flex: 1;
@@ -69,5 +46,9 @@
 
 :focus {
   outline: none;
+}
+
+#name {
+  color: #56dcee;
 }
 
