--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,11 +17,11 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  padding-top: 10rem;
+  padding-top: 18vh;
   display: flex;
   flex: 1;
   flex-direction: column;
-  width: 800px;
+  width: 70vw;
   gap: 1rem;
   font-weight: 500;
 }
@@ -33,7 +33,7 @@ h1:before {
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 3.5vw;
   font-weight: 700;
 }
 
