--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,82 +3,100 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --foreground-hidden: #c4c7d0;
-  --foreground-muted: #ccb8a8;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex: 1;
-  height: 100vh;
-  width: 100vw;
+    --foreground-rgb: 44, 44, 44;
+    --foreground-hidden: #adada4;
+    --foreground-muted: #ccb8a8;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
+    height: 100vh;
+    width: 100vw;
+    background-color: #dddcd7;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-synthesis: none;
+    text-rendering: geometricPrecision;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  padding-top: 18vh;
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  width: 70vw;
-  gap: 1rem;
-  font-weight: 500;
+    color: rgb(var(--foreground-rgb));
+    padding-top: 18vh;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    width: 45vw;
+    gap: 1rem;
 }
 
 h1:before {
-  content: "#";
-  padding-right: 0.5rem;
-  color: var(--foreground-hidden);
+    content: "#";
+    padding-right: 0.5rem;
+    color: var(--foreground-hidden);
+    font-family: var(--font-departure-mono);
 }
 
 h1 {
-  font-size: 3.5vw;
-  font-weight: 700;
+    font-size: 3.5vw;
 }
 
 a {
-  text-decoration: underline;
-  text-decoration-color:var(--foreground-hidden);
-  text-decoration-thickness: 2px;
-  text-underline-offset: 4px;
-  padding-right: 0.2rem;
+    text-decoration: underline;
+    text-decoration-color: var(--foreground-hidden);
+    text-decoration-thickness: 2px;
+    text-underline-offset: 4px;
+    padding-right: 0.2rem;
 }
 
 a:hover {
-  text-decoration-color: var(--foreground-muted);
+    text-decoration-color: var(--foreground-muted);
 }
 
 ul {
-  list-style: none;
+    list-style: none;
 }
 
 li {
-  padding-top: 0.1rem;
-  padding-bottom: 0.1rem;
+    padding-top: 0.1rem;
+    padding-bottom: 0.1rem;
 }
 
 hr {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .project-link:before {
-  content: "-";
-  padding-right: 0.5rem;
+    content: "-";
+    padding-right: 0.5rem;
 }
 .project-link {
-  display: inline-flex;
-  align-items: center;
-  cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+    cursor: pointer;
 }
 
 @media (max-width: 600px) {
-  body {
-    width: 85vw;
-    padding-top: 6vh;
-  }
-  h1 {
-    font-size: 8vw;
-  }
+    body {
+        width: 85vw;
+        padding-top: 6vh;
+    }
+    h1 {
+        font-size: 8vw;
+    }
+}
+
+.content-container {
+    border-width: 1px;
+    border-color: var(--foreground-hidden);
+    border-style: solid;
+    padding: 4rem;
+    border-radius: 0.5rem;
+}
+
+.selected-background {
+    background-color: #444444;
+    align-self: flex-start;
+    color: #dddcd7;
 }
